--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,17 @@ body{
     background-attachment: fixed;
 
 }
+@media only screen and (max-width: 480px) {
+  .paralx-div:nth-child(1){
+    background-image: url('../img/img2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position:  center;
+    width: 100%;
+    height: 360px;
 
+}
+}
 .paralx-div:nth-child(3){
     height: 600px;
     background-image: url('../img/img1.jpg');
