--- a/css/index.css
+++ b/css/index.css
@@ -54,7 +54,7 @@ body{
 }
 
 .paralx-div:nth-child(4){
-    background-image: url("http://2.bp.blogspot.com/-iVdR7yu4Rcw/Wr-ZuWXvYEI/AAAAAAAApBE/uWGt8NCOdR8vlra5n11-XxUgnkPcJ6nEwCK4BGAYYCw/s1600/matthew-smith-5935-unsplash.jpg");
+    background-image: url("../img/img4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
