--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,6 @@ html{
 .header {
   width: 100%;
   height: 100vh;
-  /* background: url(https://bit.ly/2QNWUBq); */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -60,6 +59,7 @@ html{
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
+  font-family: cursive;
 }
 
 @media only screen and (max-width: 768px) {
@@ -109,7 +109,7 @@ html{
   .header .navbar .wrapper .menu-item a {
     padding: 1rem 2rem;
     opacity: 0;
-    color: #fff;
+    color: rgb(46, 40, 40);
     font-size: 1rem;
     font-weight: 600;
     transform: translateX(-20px);
@@ -205,7 +205,7 @@ body{
     background-repeat: no-repeat;
     background-position:  center;
     width: 100%;
-    height: 460px;
+    height: 600px;
 
 }
 }
