--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,9 @@
     padding: 0;
     
 }
+:root {
+  --color1:#f3f3f3;
+}
 html{
   scroll-behavior: smooth;
 }
@@ -169,6 +172,60 @@ html{
   }
 }
 
+.hero-content{
+  font-family:Roboto;
+  position:absolute;
+  top:20%;
+  left:60px;
+  width:75%;
+  max-width:520px;
+  min-width:280px;
+}
+.hero-header{
+  font-size:64px;
+  font-weight:500;
+  color:var(--color1);
+  margin-bottom:30px;
+ 
+}
+
+.hero-sub{
+  font-size:18px;
+  font-weight:300;
+  color:var(--color1);
+  line-height:1.5;
+  margin-bottom:28px;
+}
+
+/*BUTTONS*/
+.btn-round-solid{
+  background-color: var(--color1);
+  color: #000;
+  border:none;
+  height:48px;
+  width:220px;
+  font-size:18px;
+  font-weight:400;
+  border-radius:24px;
+  margin:20px 20px 0px 0px;
+}
+
+.btn-round-clear{
+  background-color: transparent;
+  color: var(--color1);
+  border:2px solid var(--color1);
+  height:48px;
+  width:220px;
+  font-size:18px;
+  font-weight:400;
+  border-radius:24px;
+  margin:20px 20px 0px 0px;
+}
+
+ion-icon {
+  font-size: 24px;
+  vertical-align:middle;
+}
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body{
@@ -205,9 +262,20 @@ body{
     background-repeat: no-repeat;
     background-position:  center;
     width: 100%;
-    height: 600px;
-
-}
+    height: 600px;}
+    .hero-header{
+      font-size:44px;
+      font-weight:500;
+      color:var(--color1);
+      margin-bottom:20px;
+    }
+    .hero-sub{
+      font-size:17px;
+      font-weight:300;
+      color:var(--color1);
+      line-height:1.5;
+      margin-bottom:28px;
+    }
 }
 .paralx-div:nth-child(3){
     height: 600px;
