--- a/css/index.css
+++ b/css/index.css
@@ -225,6 +225,7 @@ html{
 ion-icon {
   font-size: 24px;
   vertical-align:middle;
+  color: #000;
 }
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
