--- a/css/index.css
+++ b/css/index.css
@@ -171,7 +171,15 @@ html{
     transform: translateX(0);
   }
 }
-
+.hero-content2{
+  font-family:Roboto;
+  position:absolute;
+  /* top:20%; */
+  left:60px;
+  width:100%;
+  max-width:700px;
+  min-width:280px;
+}
 .hero-content{
   font-family:Roboto;
   position:absolute;
@@ -278,16 +286,7 @@ body{
       line-height:1.5;
       margin-bottom:28px;
     }
-    .paralx-div:nth-child(2){
-      box-shadow: inset 0 0 0 200px rgba(255,255,255,0.05);
-      background-image: url('../img/img3.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position:  center;
-      background-attachment: fixed;
-      box-shadow: inset 200px 1px 300px 200px rgba(0,0,0,0.7);
-      height: 1200px;
-  }
+    
   .card-hello{
     height: 400px;
     width: 320px;
@@ -304,9 +303,19 @@ body{
             box-shadow: 20px 20px 22px rgba(0,0,0,0.2);
     font-family: 'Poppins',sans-serif;
   }
+  .hero-content2{
+    font-family:Roboto;
+    position:absolute;
+    /* top:20%; */
+    left:60px;
+    width:75%;
+    max-width:500px;
+    min-width:280px;
+  }
+  
 }
 .paralx-div:nth-child(3){
-    height: 600px;
+    height: 400px;
     background-image: url('../img/img1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -323,8 +332,20 @@ body{
     justify-content: center;
     background-attachment: fixed;
     box-shadow: inset 200px 1px 300px 200px rgba(0,0,0,0.5);
+    height: 400px;
 }
 
+.paralx-div:nth-child(5){
+  background-image: url("../img/img5.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  background-position: center;
+  background-attachment: fixed;
+  box-shadow: inset 200px 1px 300px 200px rgba(0,0,0,0.5);
+  height: 400px;
+}
 /* navbar */
 
 i {
