--- a/css/index.css
+++ b/css/index.css
@@ -263,7 +263,7 @@ body{
     background-position:  center;
     background-attachment: fixed;
     box-shadow: inset 200px 1px 300px 200px rgba(0,0,0,0.7);
-    height: 400px;
+    height: 300px;
 }
 @media only screen and (max-width: 480px) {
   .paralx-div:nth-child(1){
@@ -334,7 +334,36 @@ body{
     box-shadow: inset 200px 1px 300px 200px rgba(0,0,0,0.5);
     height: 400px;
 }
+.container .slider {
+  animation: slidein 30s linear infinite;
+  white-space: nowrap;
+}
+.container .slider .logos {
+  width: 100%;
+  display: inline-block;
+  margin: 0px 0;
+}
+.container .slider .logos .fab {
+  width: calc(100% / 5);
+  animation: fade-in 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
+}
 
+@keyframes slidein {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .paralx-div:nth-child(5){
   background-image: url("../img/img5.jpg");
   background-repeat: no-repeat;
