--- a/css/index.css
+++ b/css/index.css
@@ -405,26 +405,7 @@ ion-icon {
 
 /* slider end */
 
-
-.search-btn {
-  color: black;
-  padding-left: 5px;
-  padding-right: 3px;
-  background-color: aliceblue;
-  padding-top: 4px;
-  padding-bottom: 6px;
-  opacity: 0.4;
-}
-
-.cont-p {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  background-color: #0f0202a8;
-}
+/* header text */
 
 h3 {
   color: #262626;
@@ -465,135 +446,9 @@ p.small {
   color: white;
   font-family: courier, sans;
 }
+/* header text end */
 
-.card1 {
-  display: block;
-  position: relative;
-  max-width: 262px;
-  background-color: #f2f8f9;
-  border-radius: 4px;
-  padding: 32px 24px;
-  margin: 12px;
-  text-decoration: none;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.card1:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: -16px;
-  right: -16px;
-  background: #00838d;
-  height: 32px;
-  width: 32px;
-  border-radius: 32px;
-  transform: scale(1);
-  transform-origin: 50% 50%;
-  transition: transform 0.25s ease-out;
-}
-.card1:hover:before {
-  transform: scale(21);
-}
-
-.card1:hover p {
-  transition: all 0.3s ease-out;
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.card1:hover h3 {
-  transition: all 0.3s ease-out;
-  color: #ffffff;
-}
-
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-attachment: fixed;
-}
-
-.box {
-  position: relative;
-  margin: 0;
-  padding: 20px;
-  width: 600px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-}
-
-.box:before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-attachment: fixed;
-  filter: blur(5px);
-}
-
-.box h1 {
-  position: relative;
-  margin: 0;
-  padding: 0 0 20px;
-  font-size: 40px;
-  z-index: 2;
-  color: #fff;
-}
-
-.box p {
-  color: #fff;
-  position: relative;
-  margin: 0;
-  font-size: 20px;
-  z-index: 2;
-}
-
-#form-container-1 {
-  position: relative;
-  align-self: center;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 20px;
-  padding: 40px 40px;
-  display: flex;
-  justify-content: center;
-  /**/
-  backdrop-filter: blur(0px);
-  overflow: hidden;
-}
-
-#form-container-1 .form-block {
-  margin: 15px 0;
-}
-
-#form-container-1 .form-block label {
-  font-family: "Consolas", monospace;
-  display: block;
-  padding-left: 8px;
-  margin-bottom: 8px;
-  font-size: 0.85em;
-  color: #fff;
-  text-align: left;
-}
-
-#form-container-1 .form-block input {
-  font-size: 0.75em;
-  padding: 8px;
-  border: none;
-  border: 0px solid rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  transition: 0.1s all ease-in-out;
-}
-
-#form-container-1 > form input:focus {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  outline: none;
-}
-
+/* Footer start */
 .btn-feedback {
   font-size: 0.75em;
   padding: 8px;
@@ -683,20 +538,10 @@ ul {
   width: 40px;
   text-align: center;
   line-height: 38px;
-  /* border-radius: 50%; */
 }
 .social-icon {
   font-size: 40px;
 }
-/* .facebook-bg{
-  background: #3B5998;
-}
-.twitter-bg{
-  background: #55ACEE;
-}
-.google-bg{
-  background: #DD4B39;
-} */
 .footer-widget-heading h3 {
   color: #fff;
   font-size: 20px;
@@ -715,7 +560,6 @@ ul {
 }
 .footer-widget ul li {
   display: inline-block;
-  /* float: left; */
   width: 50%;
   margin-bottom: 12px;
 }
@@ -726,30 +570,7 @@ ul {
   color: #878787;
   text-transform: capitalize;
 }
-.subscribe-form {
-  position: relative;
-  overflow: hidden;
-}
-.subscribe-form input {
-  width: 100%;
-  padding: 14px 28px;
-  background: #2e2e2e;
-  border: 1px solid #2e2e2e;
-  color: #fff;
-}
-.subscribe-form button {
-  position: absolute;
-  right: 0;
-  background: #ff5e14;
-  padding: 13px 20px;
-  border: 1px solid #ff5e14;
-  top: 0;
-}
-.subscribe-form button i {
-  color: #fff;
-  font-size: 22px;
-  transform: rotate(-6deg);
-}
+
 .copyright-area {
   background: #202020;
   padding: 25px 0;
@@ -776,8 +597,8 @@ ul {
 .logo {
   color: #00838d;
 }
+/* Footer end */
 
-@import url("https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap");
 :root {
   --d: 700ms;
   --e: cubic-bezier(0.19, 1, 0.22, 1);
@@ -785,294 +606,4 @@ ul {
   --font-serif: "Cardo", serif;
 }
 
-* {
-  box-sizing: border-box;
-}
 
-html,
-body {
-  height: 100%;
-}
-
-/* body {
-  display: grid;
-  place-items: center;
-} */
-
-.page-content {
-  display: grid;
-  grid-gap: 1rem;
-  padding: 1rem;
-  max-width: 1024px;
-  margin: 0 auto;
-  font-family: var(--font-sans);
-}
-@media (min-width: 600px) {
-  .page-content {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (min-width: 800px) {
-  .page-content {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-.card {
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  overflow: hidden;
-  padding: 1rem;
-  width: 100%;
-  text-align: center;
-  color: whitesmoke;
-  background-color: whitesmoke;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
-    0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1),
-    0 16px 16px rgba(0, 0, 0, 0.1);
-}
-@media (min-width: 600px) {
-  .card {
-    height: 300px;
-  }
-}
-.card:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 110%;
-  background-size: cover;
-  background-position: 0 0;
-  transition: transform calc(var(--d) * 1.5) var(--e);
-  pointer-events: none;
-}
-.card:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 200%;
-  pointer-events: none;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.009) 11.7%,
-    rgba(0, 0, 0, 0.034) 22.1%,
-    rgba(0, 0, 0, 0.072) 31.2%,
-    rgba(0, 0, 0, 0.123) 39.4%,
-    rgba(0, 0, 0, 0.182) 46.6%,
-    rgba(0, 0, 0, 0.249) 53.1%,
-    rgba(0, 0, 0, 0.32) 58.9%,
-    rgba(0, 0, 0, 0.394) 64.3%,
-    rgba(0, 0, 0, 0.468) 69.3%,
-    rgba(0, 0, 0, 0.54) 74.1%,
-    rgba(0, 0, 0, 0.607) 78.8%,
-    rgba(0, 0, 0, 0.668) 83.6%,
-    rgba(0, 0, 0, 0.721) 88.7%,
-    rgba(0, 0, 0, 0.762) 94.1%,
-    rgba(0, 0, 0, 0.79) 100%
-  );
-  transform: translateY(-50%);
-  transition: transform calc(var(--d) * 2) var(--e);
-}
-.card:nth-child(1):before {
-  background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
-.card:nth-child(2):before {
-  background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
-.card:nth-child(3):before {
-  background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
-.card:nth-child(4):before {
-  background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
-
-.content {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  padding: 1rem;
-  transition: transform var(--d) var(--e);
-  z-index: 1;
-}
-.content > * + * {
-  margin-top: 1rem;
-}
-
-.title {
-  font-size: 1.3rem;
-  font-weight: bold;
-  line-height: 1.2;
-}
-
-.copy {
-  font-family: var(--font-serif);
-  font-size: 1.125rem;
-  font-style: italic;
-  line-height: 1.35;
-}
-
-.btn {
-  cursor: pointer;
-  margin-top: 1.5rem;
-  padding: 0.75rem 1.5rem;
-  font-size: 0.65rem;
-  font-weight: bold;
-  letter-spacing: 0.025rem;
-  text-transform: uppercase;
-  color: white;
-  background-color: black;
-  border: none;
-}
-.btn:hover {
-  background-color: #0d0d0d;
-}
-.btn:focus {
-  outline: 1px dashed yellow;
-  outline-offset: 3px;
-}
-
-@media (hover: hover) and (min-width: 600px) {
-  .card:after {
-    transform: translateY(0);
-  }
-
-  .content {
-    transform: translateY(calc(100% - 4.5rem));
-  }
-  .content > *:not(.title) {
-    opacity: 0;
-    transform: translateY(1rem);
-    transition: transform var(--d) var(--e), opacity var(--d) var(--e);
-  }
-
-  .card:hover,
-  .card:focus-within {
-    align-items: center;
-  }
-  .card:hover:before,
-  .card:focus-within:before {
-    transform: translateY(-4%);
-  }
-  .card:hover:after,
-  .card:focus-within:after {
-    transform: translateY(-50%);
-  }
-  .card:hover .content,
-  .card:focus-within .content {
-    transform: translateY(0);
-  }
-  .card:hover .content > *:not(.title),
-  .card:focus-within .content > *:not(.title) {
-    opacity: 1;
-    transform: translateY(0);
-    transition-delay: calc(var(--d) / 8);
-  }
-
-  .card:focus-within:before,
-  .card:focus-within:after,
-  .card:focus-within .content,
-  .card:focus-within .content > *:not(.title) {
-    transition-duration: 0s;
-  }
-}
-
-.card-hello {
-  height: 400px;
-  width: 320px;
-  background-color: rgba(255, 255, 255, 0.06);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  position: absolute;
-  top: 220%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: auto;
-  border-radius: 8px;
-  -webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
-  box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
-  font-family: "Poppins", sans-serif;
-}
-.card-img {
-  height: 120px;
-  width: 120px;
-  background-color: rgba(255, 255, 255, 0.06);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  border-radius: 50%;
-  position: absolute;
-  margin: 30px auto 20px auto;
-  left: 0;
-  right: 0;
-}
-.card-img img {
-  height: 86%;
-  border-radius: 50%;
-  margin-left: 7%;
-  margin-top: 7%;
-}
-
-.desc {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  top: 160px;
-}
-.primary-text {
-  color: #d5d5d5;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: 0.7px;
-  margin: 5px 0;
-}
-.secondary-text {
-  color: #c0c0c0;
-  font-weight: 400;
-  font-size: 14px;
-  letter-spacing: 1px;
-  margin: 5px 0;
-}
-.hello-btn {
-  background-color: rgba(255, 255, 255, 0.06);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  border: none;
-}
-.details {
-  display: -ms-grid;
-  display: grid;
-  width: 100%;
-  height: 70px;
-  padding: 5px 0;
-  -ms-grid-columns: auto auto;
-  grid-template-columns: auto auto;
-  background-color: rgba(255, 255, 255, 0.06);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
-  position: absolute;
-  bottom: 0;
-  border-radius: 0 0 8px 8px;
-}
-.details > div {
-  text-align: center;
-}
-.details > div:first-child {
-  border-right: 2px solid rgba(255, 255, 255, 0.08);
-}
-.hello-btn {
-  width: 80%;
-  padding: 15px 0;
-  position: absolute;
-  left: 10%;
-  top: 240px;
-  border-radius: 5px;
-  outline: none;
-}
