--- a/css/index.css
+++ b/css/index.css
@@ -249,7 +249,7 @@ ion-icon {
 }
 
 .paralx-div:nth-child(1) {
-  background-image: url("../img/img2.jpg");
+  background-image: url("../img/img2.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -257,7 +257,7 @@ ion-icon {
 }
 .paralx-div:nth-child(2) {
   box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.05);
-  background-image: url("../img/img3.jpg");
+  background-image: url("../img/img3.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -267,7 +267,7 @@ ion-icon {
 }
 .paralx-div:nth-child(3) {
   height: 450px;
-  background-image: url("../img/img1.jpg");
+  background-image: url("../img/img1.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -276,7 +276,7 @@ ion-icon {
 }
 
 .paralx-div:nth-child(4) {
-  background-image: url("../img/img4.jpg");
+  background-image: url("../img/img4.webp");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -286,7 +286,7 @@ ion-icon {
   height: 400px;
 }
 .paralx-div:nth-child(5) {
-  background-image: url("../img/img5.jpg");
+  background-image: url("../img/img5.webp");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -298,7 +298,7 @@ ion-icon {
 }
 @media only screen and (max-width: 480px) {
   .paralx-div:nth-child(1) {
-    background-image: url("../img/img2.jpg");
+    background-image: url("../img/img2.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
