--- a/css/about.css
+++ b/css/about.css
@@ -68,7 +68,7 @@ body{
 .stline{
     font-size: 15px;
     font-family: sans-serif;
-    color: #6e9797;
+    color: #fff;
     line-height: 2;
     font-weight: 400;
     text-align: center;
