--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,16 @@
   margin: 0;
   padding: 0;
 }
+#preloader {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #008080;
+	z-index: 99;
+	height: 100%;
+}
 :root {
   --color1: #f3f3f3;
 }
