--- a/css/about.css
+++ b/css/about.css
@@ -18,7 +18,7 @@ body{
 #status {
 	width: 200px;
 	height: 200px;
-	position: absolute;
+	position: fixed;
 	left: 50%;
 	top: 50%;
 	background-image: url(http://marinamarques.pt/img/preloader.gif);
