--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
 }
+.font_style{
+  font-family: 'Open Sans', sans-serif;
+}
 .loader,
         .loader:after {
             border-radius: 50%;
@@ -305,7 +308,7 @@ ion-icon {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: inset 200px 1px 300px 200px rgba(18, 37, 88, 0.5);
+  box-shadow: inset 200px 1px 300px 200px rgba(3, 17, 54, 0.5);
 }
 .paralx-div:nth-child(2) {
   box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.05);
