--- a/css/index.css
+++ b/css/index.css
@@ -3,61 +3,61 @@
   margin: 0;
   padding: 0;
 }
-.font_style{
-  font-family: 'Open Sans', sans-serif;
+.font_style {
+  font-family: "Open Sans", sans-serif;
 }
 .loader,
-        .loader:after {
-            border-radius: 50%;
-            width: 10em;
-            height: 10em;
-        }
-        .loader {            
-            margin: 60px auto;
-            font-size: 10px;
-            position: relative;
-            text-indent: -9999em;
-            border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-            border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-            border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-            border-left: 1.1em solid #ffffff;
-            -webkit-transform: translateZ(0);
-            -ms-transform: translateZ(0);
-            transform: translateZ(0);
-            -webkit-animation: load8 1.1s infinite linear;
-            animation: load8 1.1s infinite linear;
-           
-            overflow: hidden;
-        }
-        @-webkit-keyframes load8 {
-            0% {
-                -webkit-transform: rotate(0deg);
-                transform: rotate(0deg);
-            }
-            100% {
-                -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-            }
-        }
-        @keyframes load8 {
-            0% {
-                -webkit-transform: rotate(0deg);
-                transform: rotate(0deg);
-            }
-            100% {
-                -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-            }
-        }
-        #loadingDiv {
-            position:fixed;
-            top:0;
-            left:0;
-            width:100%;
-            height:100%;
-            background-color:#000;
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.loader {
+  margin: 60px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-left: 1.1em solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
 
-        }
+  overflow: hidden;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+#loadingDiv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  overflow: hidden;
+}
 :root {
   --color1: #f3f3f3;
 }
@@ -327,7 +327,7 @@ ion-icon {
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  box-shadow: inset 200px 1px 300px 200px rgba(18, 37, 88, 0.5);
+  box-shadow: inset 200px 1px 300px 200px rgba(0, 0, 0, 0.5);
 }
 
 .paralx-div:nth-child(4) {
@@ -358,7 +358,7 @@ ion-icon {
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 600px;
+    height: 450px;
   }
   .hero-header {
     font-size: 44px;
@@ -382,7 +382,7 @@ ion-icon {
     max-width: 520px;
     min-width: 280px;
   }
-  
+
   .hero-content2 {
     font-family: Roboto;
     position: absolute;
@@ -422,7 +422,7 @@ ion-icon {
   .dis {
     display: none;
   }
-  .footer-content{
+  .footer-content {
     padding-left: 60px;
   }
 }
@@ -459,7 +459,6 @@ ion-icon {
     opacity: 1;
   }
 }
-
 
 /* slider end */
 
@@ -663,5 +662,3 @@ ul {
   --font-sans: "Rubik", sans-serif;
   --font-serif: "Cardo", serif;
 }
-
-
