--- a/css/index.css
+++ b/css/index.css
@@ -4,83 +4,59 @@
   padding: 0;
 }
 
-#preloader {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: #008080;
-	z-index: 99;
-	height: 100%;
-}
-
-#status {
-	width: 200px;
-	height: 200px;
-	position: fixed;
-	left: 50%;
-	top: 50%;
-	background-image: url(http://marinamarques.pt/img/preloader.gif);
-	background-repeat: no-repeat;
-	background-position: center;
-	margin: -100px 0 0 -100px;
-}
 .font_style {
   font-family: "Open Sans", sans-serif;
 }
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
+#app {
+  display: none;
+  background-color: #020202;
 }
-.loader {
-  margin: 60px auto;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #ffffff;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
+.splash{
+  /* margin:200px auto; */
+  height: 600px;
+  background-color: #020202;
+}
+@media only screen and (max-width: 768px) {
+  #imgid{
+    width:400px;
+    height:400px;
+    margin-top:80px
+  }
+  .splash{
+  height: 700px;
+  background-color: #020202;
+}
+  
+}
 
-  overflow: hidden;
+@media (min-width:801px)  {
+/* center a image   */
+#imgid{
+  width:500px;
+  height:500px;
 }
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
 }
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+@media (min-width:1025px) {
+/* center a image   */
+#imgid{
+  width:500px;
+  height:500px;
 }
-#loadingDiv {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  overflow: hidden;
 }
+@media (min-width:1281px) { 
+/* center a image   */
+#imgid{
+  width:500px;
+  height:500px;
+}
+}
+
+
+
+
+
+
+
 :root {
   --color1: #f3f3f3;
 }
