--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,9 @@
   width:500px;
   height:500px;
 }
+.splash{
+  height: 900px;
+  background-color: #020202;}
 }
 @media (min-width:1025px) {
 /* center a image   */
@@ -42,8 +45,14 @@
   width:500px;
   height:500px;
 }
+.splash{
+  height: 900px;
+  background-color: #020202;}
 }
 @media (min-width:1281px) { 
+  .splash{
+    height: 900px;
+    background-color: #020202;}
 /* center a image   */
 #imgid{
   width:500px;
