--- a/css/about.css
+++ b/css/about.css
@@ -8,7 +8,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: #008080;
+	background-color: #000;
 	z-index: 99;
 	height: 100%;
 }
@@ -53,7 +53,7 @@ body{
         border-radius: 10%;
     }
     .hero-header{
-        font-size: 20px;
+        font-size: 15px;
         text-align: left;
         margin-top: -8%;
     }
@@ -75,7 +75,7 @@ body{
         border-radius: 10%;
     }
     .hero-header{
-        font-size: 20px;
+        font-size: 15px;
         text-align: left;
         margin-top: -8%;
     }
@@ -91,7 +91,12 @@ body{
         margin-left: 30px;
     }
     .hero-header{
-        font-size: 20px;
+        font-size: 15px;
+        text-align: left;
+        margin-top: -2%;
+    }
+    .hero-id{
+        font-size: 15px;
         text-align: left;
         margin-top: -2%;
     }
@@ -106,7 +111,7 @@ body{
         margin-left: 30px;
     }
     .hero-header{
-        font-size: 20px;
+        font-size: 15px;
         text-align: left;
         margin-top: -2%;
     }
@@ -122,7 +127,7 @@ body{
         margin-left: 30px;
     }
     .hero-header{
-        font-size: 20px;
+        font-size: 15px;
         text-align: left;
         margin-top: -2%;
     }
@@ -141,7 +146,7 @@ body{
     width:200px;
     height: 200px;
     border-radius: 50%;
-    border: 1px solid #ddd;
+    border: 2px solid rgb(243, 181, 10);
     opacity: 1;
 }
 .stline{
@@ -152,3 +157,10 @@ body{
     font-weight: 400;
     text-align: center;
 }
+.paralx-div2 {
+    background-image: url("../img/img2.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: inset 200px 1px 300px 200px rgba(60, 10, 88, 0.5);
+  }
