--- a/css/about.css
+++ b/css/about.css
@@ -142,3 +142,11 @@ body{
     background-position: center;
     box-shadow: inset 200px 1px 300px 200px rgba(60, 10, 88, 0.5);
   }
+
+  .paralx-div3 {
+    background-image: url("../img/img3.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: inset 200px 1px 300px 200px rgba(12, 119, 122, 0.5);
+  }
